--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,11 @@ spring:
     import: "optional:configserver:http://localhost:8071/"
   profiles: 
     active: "prod"
+management: 
+   endpoints:
+     web: 
+      exposure:
+         include: "*"
 
 build.version: 3.0
 
