--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,18 @@ management:
      web: 
       exposure:
          include: "*"
+   info: 
+     env: 
+      enabled: true
+   
+endpoint:
+   shutdown:
+     enabled: true
+info: 
+ app: 
+  name:"cards"
+  description:"Eazy Bank Cards Application"
+  version:"1.0.0"
 
 build.version: 3.0
 
